syntax = "proto3";

package account.aggregates.account.grpc;

option go_package = "vl-account/proto_generated/account/aggregates/account/grpc;protoaccountgrpc";

import "proto/common/grpc/grpc.proto";

// Login
// Request
message UserLoginRequest {
  common.grpc.GRPCRequest base = 1;
  UserLoginRequestData data = 2;
}

message UserLoginRequestData {
  string organization_name = 1;
  string username = 2;
  string password = 3;
}

// Response
message UserLoginResponse {
  common.grpc.GRPCResponse base = 1;
  UserLoginResponseData data = 2;
}

message UserLoginResponseData {
  string id_token = 1;
  string refresh_token = 2;
  string access_token = 3;
}

// Logout
// Request
message UserLogoutRequest {
  common.grpc.GRPCRequest base = 1;
  UserLogoutRequestData data = 2;
}

// Response
message UserLogoutRequestData {
  string access_token = 1;
}

message UserLogoutResponse {
  common.grpc.GRPCResponse base = 1;
  UserLogoutResponseData data = 2;
}

message UserLogoutResponseData {
}
