syntax = "proto3";

package common.messaging;
option go_package="vl-account/proto_generated/common/messaging;protomsg";

import "proto/common/error_codes.proto";

message Transaction {
  string ep_id = 1;
  string ep_trx_id = 2;
  string instance_id = 3;
  string exec_id = 4;
  uint64 page_id = 5;
  uint64 function_id = 6;
}

message Client {
  uint64 organization_id = 1;
  uint64 user_id = 2;
  string organization_name = 3;
  string user_name = 4;
  bool is_admin = 5;
}

message Error {
  common.ErrorCodes code = 1;
  // parameters to use in error messages associated with code.
  map<string, string> parameters = 2;
}
